test/tests/errors/error-file-put-not-end-of-file.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    bf = 1;
    put f;
    reset f;
    bf = 1;
    put f;
}